force-app/main/default/objects/LLC_BI__Review__c/LLC_BI__Review__c.object-meta.xml
<CustomObject>
    <description>The Review object is used to track details of the review process for the relationships/ loans in nCino.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>