force-app/main/default/objects/LLC_BI__Review__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is available on the Account review record page. This is a Lookup that is automatically populated to the Account that the review was started from. It links the review record to the account. This is NOT available or needed on the Product Package review record page, because that review could be more multiple relationships and loans associated to the Product Package</description>
    <inlineHelpText>Lookup to the Account that is involved in the review.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>