force-app/main/default/objects/LLC_BI__Review__c/fields/LLC_BI__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is used to look up the credit memo record that is associated to the review record. If a credit memo is configured for reviews, this field is automatically populated once a credit memo is generated.</description>
    <label>Credit Memo</label>
    <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>