force-app/main/default/objects/LLC_BI__Review__c/fields/LLC_BI__Narrative__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Narrative__c</fullName>
    <description>This rich text field is optional and manually populated. It is used for the financial institution user to specify details and additional information about the review.</description>
    <label>Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>