force-app/main/default/objects/LLC_BI__Review__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This field is automatically populated and  is used to specify the status of the review. The review status field will be populated with &quot;in progress&quot; when a review record is initiated. Through configuration of approval processes, the review will be automatically placed as complete when an approval process is complete and approved. Or, this field can be manually updated to complete if there is no configuration to automate the status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>