force-app/main/default/objects/LLC_BI__Review__c/recordTypes/LLC_BI__Package_Review_Complete.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Package_Review_Complete</fullName>
    <active>true</active>
    <description>Package Review Complete</description>
    <label>Package Review Complete</label>
</RecordType>