force-app/main/default/objects/LLC_BI__Review__c/recordTypes/LLC_BI__Package_Review_In_Progress.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Package_Review_In_Progress</fullName>
    <active>true</active>
    <description>Package Review In Progress</description>
    <label>Package Review In Progress</label>
</RecordType>